# vulkan-guide

./: CMakeLists.txt  CMakeSettings.json
shaders/: default_lit.frag  default_lit.frag.spv  textured_lit.frag  textured_lit.frag.spv  tri_mesh.vert  tri_mesh.vert.spv
src/: CMakeLists.txt  input_manager.cpp  input_manager.h  logger.h  player_camera.cpp  player_camera.h  vk_buffers.cpp  vk_buffers.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_frame.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_pipelines.cpp  vk_pipelines.h  vk_shaders.cpp  vk_shaders.h  vk_textures.cpp  vk_textures.h  vk_types.h
